--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "moment": "^2.29.4",
+    "next": "14.0.0",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.0"
+    "serverless-mysql": "^1.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10",
